--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         for (let i = 0; i < numCats; i++) {
             let cat = document.createElement("img");
-            cat.src = "https://i.pinimg.com/736x/2a/d9/27/2ad9278233e9f4d41d0a7dd92495fdb3--animated-gif-gifs.jpg";
+            cat.src = "./media/cat.png";
             cat.className = "cat";
             cat.style.top = Math.random() * screenHeight * 0.8 + "px";
             cat.style.left = Math.random() * screenWidth + "px";
