--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0;
             height: 100vh;
             display: flex;
+			flex-direction: column;
             align-items: center;
             justify-content: center;
         }
@@ -22,7 +23,14 @@
     </style>
 </head>
 <body>
-	<h1>Happy Birthday</h1>
+	<div>
+		<h1>Happy Birthday</h1>
+	</div>
+	<div>
+		<audio controls="controls" loop="loop" autoplay="autoplay">
+			<source src="./media/soul.mp3" type="audio/mp3">
+		</audio>
+	</div>
     <script>
         const numCats = 15;
         const cats = [];
